[gd_scene format=3 uid="uid://cuo8gfhkuj1sp"]

[ext_resource type="Script" uid="uid://4tfk2mcg8iqd" path="res://scripts/upgrade_shop.gd" id="1_v8ny2"]

[sub_resource type="LabelSettings" id="LabelSettings_v8ny2"]
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_lx5au"]
font_size = 40

[node name="Shop" type="CanvasLayer" unique_id=1040199959]
script = ExtResource("1_v8ny2")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1964844977]
offset_right = 1151.0
offset_bottom = 647.0
color = Color(0.27, 0.27, 0.27, 0.5176471)

[node name="ColorRect2" type="ColorRect" parent="." unique_id=768463750]
offset_left = 56.0
offset_top = 152.0
offset_right = 502.0
offset_bottom = 601.0
color = Color(0.2, 0.2, 0.2, 0.6039216)

[node name="ColorRect3" type="ColorRect" parent="." unique_id=491384063]
offset_left = 628.0
offset_top = 155.0
offset_right = 1102.0
offset_bottom = 604.0
color = Color(0.2, 0.2, 0.2, 0.6039216)

[node name="LineStrengthButon" type="Button" parent="." unique_id=213497287]
offset_left = 86.0
offset_top = 391.0
offset_right = 352.0
offset_bottom = 454.0
theme_override_font_sizes/font_size = 40
text = "Line Strength"

[node name="ReelSpeedButton" type="Button" parent="." unique_id=2053628293]
offset_left = 89.0
offset_top = 489.0
offset_right = 308.0
offset_bottom = 552.0
theme_override_font_sizes/font_size = 40
text = "Reel Speed"

[node name="LuckButton" type="Button" parent="." unique_id=960684540]
offset_left = 84.0
offset_top = 198.0
offset_right = 182.0
offset_bottom = 261.0
theme_override_font_sizes/font_size = 40
text = "Luck"

[node name="CatchSpeedButton" type="Button" parent="." unique_id=287598673]
offset_left = 83.0
offset_top = 293.0
offset_right = 329.0
offset_bottom = 356.0
theme_override_font_sizes/font_size = 40
text = "Catch Speed"

[node name="CloseButton" type="Button" parent="." unique_id=1649534123]
offset_left = 510.0
offset_top = 573.0
offset_right = 621.0
offset_bottom = 636.0
theme_override_font_sizes/font_size = 40
text = "Close"

[node name="UPGRADES!!!!!!!!HAZAH!" type="Label" parent="." unique_id=912763036]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -507.0
offset_right = 507.0
offset_bottom = 137.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "Upgrades!!!!!!!! HAZAH!"
label_settings = SubResource("LabelSettings_v8ny2")

[node name="MoneyUHave" type="Label" parent="." unique_id=496310811]
offset_left = 640.0
offset_top = 539.0
offset_right = 792.0
offset_bottom = 594.0
text = "Money: "
label_settings = SubResource("LabelSettings_lx5au")

[connection signal="pressed" from="LineStrengthButon" to="." method="_on_line_strength_buton_pressed"]
[connection signal="pressed" from="ReelSpeedButton" to="." method="_on_reel_speed_button_pressed"]
[connection signal="pressed" from="LuckButton" to="." method="_on_luck_button_pressed"]
[connection signal="pressed" from="CatchSpeedButton" to="." method="_on_strength_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
