[gd_scene format=3 uid="uid://cuo8gfhkuj1sp"]

[ext_resource type="Script" uid="uid://4tfk2mcg8iqd" path="res://scripts/upgrade_shop.gd" id="1_v8ny2"]

[node name="UpgradeShop" type="CanvasLayer" unique_id=1040199959]
script = ExtResource("1_v8ny2")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1964844977]
offset_right = 1151.0
offset_bottom = 647.0
color = Color(0.36, 0.36, 0.36, 0.5019608)

[node name="DepthButon" type="Button" parent="." unique_id=213497287]
offset_left = 150.0
offset_top = 195.0
offset_right = 206.0
offset_bottom = 226.0
theme_override_font_sizes/font_size = 40
text = "Depth"

[node name="ReelSpeedButton" type="Button" parent="." unique_id=2053628293]
offset_left = 134.0
offset_top = 266.0
offset_right = 227.0
offset_bottom = 297.0
theme_override_font_sizes/font_size = 40
text = "Reel Speed"

[node name="LineStrengthButton" type="Button" parent="." unique_id=306555426]
offset_left = 126.0
offset_top = 341.0
offset_right = 392.0
offset_bottom = 404.0
theme_override_font_sizes/font_size = 40
text = "Line Strength"

[node name="LuckButton" type="Button" parent="." unique_id=960684540]
offset_left = 146.0
offset_top = 421.0
offset_right = 244.0
offset_bottom = 484.0
theme_override_font_sizes/font_size = 40
text = "Luck"

[node name="CloseButton" type="Button" parent="." unique_id=1649534123]
offset_left = 523.0
offset_top = 501.0
offset_right = 634.0
offset_bottom = 564.0
theme_override_font_sizes/font_size = 40
text = "Close"

[connection signal="pressed" from="DepthButon" to="." method="_on_depth_buton_pressed"]
[connection signal="pressed" from="ReelSpeedButton" to="." method="_on_reel_speed_button_pressed"]
[connection signal="pressed" from="LineStrengthButton" to="." method="_on_line_strength_button_pressed"]
[connection signal="pressed" from="LuckButton" to="." method="_on_luck_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
